syntax = "proto3";

import "google/protobuf/empty.proto";

package service;

option go_package = "api/grpc";

message URL {
  string id = 1;
  string short = 2;
  string original = 3;
  string user = 4;
  bool is_deleted = 5;
}

message ShortenRequest {
  string original_url = 1;
}

message ShortenResponse {
  string short_url = 1;
  string error = 2;
}


message UrlRequest {
  string short_url = 1;
}

message UrlResponse {
  string original_url = 1;
  string error = 2;
}


message ShortenBatchRequestEntity {
  string correlation_id = 1;
  string original_url = 2;
}

message ShortenBatchRequest {
  repeated ShortenBatchRequestEntity urls = 1;
}

message ShortenBatchResponseEntity {
  string correlation_id = 1;
  string short_url = 3;
}

message ShortenBatchResponse {
  repeated ShortenBatchResponseEntity urls = 1;
  string error = 2;
}


message APIStatsResponse {
  int32 urls = 1;
  int32 users = 2;
  string error = 3;
}


service Shortener {
  rpc Shorten(ShortenRequest) returns (ShortenResponse);
  rpc ShortenBatch(ShortenBatchRequest) returns (ShortenBatchResponse);
  rpc Get(UrlRequest) returns (UrlResponse);
  rpc GetStats(google.protobuf.Empty) returns (APIStatsResponse);
}
